...
import java.security.MessageDigest

enum class Platform(val title: String, val aliases: Set<String>, val extensions: Set<String>) {
 NES("Nintendo Entertainment System", setOf("nes"), setOf("nes", "fds")),
 SNES("Super Nintendo", setOf("snes"), setOf("sfc", "smc")),
 GB("Game Boy", setOf("gb"), setOf("gb")), GBC("Game Boy Color", setOf("gbc"), setOf("gbc")),
 GBA("Game Boy Advance", setOf("gba"), setOf("gba")),
 GENESIS("Sega Mega Drive", setOf("genesis", "megadrive"), setOf("md", "gen", "smd")),
 PCE("PC Engine", setOf("pce", "pcengine"), setOf("pce")),
 N64("Nintendo 64", setOf("n64"), setOf("z64", "n64", "v64")),
 NDS("Nintendo DS", setOf("nds", "ds"), setOf("nds")),
 N3DS("Nintendo 3DS", setOf("3ds", "n3ds"), setOf("3ds", "cci")),
 PS1("PlayStation", setOf("ps1", "psx", "ps", "playstation"), setOf("cue", "chd", "m3u", "bin", "img", "iso", "pbp", "ecm", "mds", "mdf", "ccd", "exe")),
...
